add table delete script

--- a/app/views/partials/_scripts.hbs
+++ b/app/views/partials/_scripts.hbs
@@ -3,3 +3,4 @@
 
 {{#if form_user_signin}}<script type="text/javascript" src="/js/user_signin.js"></script>{{/if}}
 {{#if form_user_update}}<script type="text/javascript" src="/js/user_update.js"></script>{{/if}}
+{{#if scripts.table_delete}}<script type="text/javascript" src="/js/table_delete.js"></script>{{/if}}
