--- a/app/views/pages/users/index.hbs
+++ b/app/views/pages/users/index.hbs
@@ -5,7 +5,7 @@
       <thead>
         <tr>
           <th class="text-center" width="45px;">
-            <button class="btn btn-link btn-sm" disabled>
+            <button id="btn_delete_many" data-delete="authors" class="btn btn-link btn-sm" disabled>
               <i class="fal fa-trash-alt"></i>
             </button>
           </th>
@@ -15,9 +15,9 @@
       </thead>
       <tbody>
         {{#each users}}
-        <tr>
+        <tr id="row_{{this.id}}">
           <td class="text-center">
-            <input type="checkbox">
+            <input type="checkbox" name="to_delete" id="delete_{{this.id}}">
           </td>
           <td>{{this.name}}</td>
           <td data-show="cell-sm">{{this.email}}</td>
@@ -34,5 +34,4 @@
   </div>
 </div>
 
-{{> scripts/_table_delete}}
 
