add author views

--- a/app/views/pages/authors/detail.hbs
+++ b/app/views/pages/authors/detail.hbs
@@ -1,2 +1,2 @@
-<h1>{{user.name}} <small><a href="/users/{{user._id}}/update">update</a></small></h1>
-<p>{{user.email}}</p>
+<h1>{{author.fname}} {{author.lname}} <small><a href="/authors/{{author._id}}/update">update</a></small></h1>
+<p>{{author.affiliation}}</p>
