--- a/app/views/pages/authors/update.hbs
+++ b/app/views/pages/authors/update.hbs
@@ -1,23 +1,27 @@
 <div class="row">
   <div class="col-12">
-    <form action="/api/users/{{user._id}}?_method=PUT" method="POST" class="card mx-auto shadow-sm" id="form_user_update">
+    <form action="/api/authors/{{author._id}}?_method=PUT" method="POST" class="card mx-auto shadow-sm" id="form_author_update">
     <div class="card-header">
-      <legend>update user</legend>
+      <legend>update author</legend>
     </div>    
     <div class="card-body">
       <div class="form-group">
-        <label for="name">Name:</label>
-        <input type="text" name="name" class="form-control" value="{{user.name}}">
+        <label for="fname">First Name:</label>
+        <input type="text" name="fname" class="form-control" value="{{author.fname}}">
       </div>
       <div class="form-group">
-        <label for="email">Email address:</label>
-        <input type="email" name="email" class="form-control" value="{{user.email}}">
-      </div>
+        <label for="lname">Last Name:</label>
+        <input type="text" name="lname" class="form-control" value="{{author.lname}}">
+      </div>  
+      <div class="form-group">
+        <label for="affiliation">Affiliation:</label>
+        <input type="text" name="affiliation" class="form-control" value="{{author.affiliation}}">
+      </div>         
 
     </div>
     <div class="card-footer">
       <button type="submit" class="btn btn-primary">update</button> 
-      <a href="/users" class="btn btn-secondary">cancel</a>     
+      <a href="/authors" class="btn btn-secondary">cancel</a>     
     </div> 
   </form>
   </div>
