--- a/app/views/partials/_header.hbs
+++ b/app/views/partials/_header.hbs
@@ -23,6 +23,9 @@
           <a class="nav-link" href="/about">about</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/authors?sort=lname">authors</a>
+        </li>        
+        <li class="nav-item">
           <a class="nav-link" href="/users">users</a>
         </li>
         <li class="nav-item dropdown">
