--- a/app/views/partials/_header.hbs
+++ b/app/views/partials/_header.hbs
@@ -24,7 +24,10 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/authors?sort=lname">authors</a>
-        </li>        
+        </li>   
+        <li class="nav-item">
+          <a class="nav-link" href="/books?sort=date_publication">books</a>
+        </li>              
         <li class="nav-item">
           <a class="nav-link" href="/users">users</a>
         </li>
